add code coverage, fix test, make compatible with java 17